--- a/Scripts/infering.ipynb
+++ b/Scripts/infering.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import torch\n",
     "from transformers import AutoModelForCausalLM, BitsAndBytesConfig, AutoTokenizer, GenerationConfig\n",
-    "base_model = 'sxysxy/Wat2c'\n",
+    "base_model = 'wadecc/Wat2c'\n",
     "tokenizer = AutoTokenizer.from_pretrained(base_model)\n",
     "device = \"cuda:1\"  \n",
     "model = AutoModelForCausalLM.from_pretrained(\n",
