--- a/Scripts/infering.ipynb
+++ b/Scripts/infering.ipynb
@@ -147,8 +147,8 @@
    "source": [
     "\n",
     "result, _, _ = CLM_decompile(\n",
-    "    wat_path = '/home/sxy/wasm2c/z_test/b_test/b.wat',\n",
-    "    invoke_list = ['$bb']                \n",
+    "    wat_path = 'xxx.wat',\n",
+    "    invoke_list = ['main']                \n",
     ")\n",
     "print(formated_c(result))"
    ]
