--- a/Dataset/get_train_dataset.ipynb
+++ b/Dataset/get_train_dataset.ipynb
@@ -8,8 +8,8 @@
    "source": [
     "from datasets import load_from_disk,Dataset,load_dataset\n",
     "\n",
-    "dataset = load_dataset('sxysxy/FGW2C')\n",
-    "dataset.save_to_disk('/home/sxy/wasm2c/WaDec/Dataset/train_dataset/')\n"
+    "dataset = load_dataset('wadecc/FGW2C')\n",
+    "dataset.save_to_disk('train_dataset/')\n"
    ]
   }
  ],
