--- a/Scripts/Metrics/Similarity_codebloat/eval.ipynb
+++ b/Scripts/Metrics/Similarity_codebloat/eval.ipynb
@@ -10,7 +10,7 @@
     "from ccn import get_CCN_SCORE\n",
     "from cos import get_COS_SCORE\n",
     "from tree_sitter import Language, Parser\n",
-    "C_LANGUAGE = Language('/home/sxy/tree_sitter/build/my-languages.so', 'c')\n",
+    "C_LANGUAGE = Language('../Codebleu/so/my-languages.so', 'c')\n",
     "parser = Parser()\n",
     "parser.set_language(C_LANGUAGE)\n",
     "\n",
