--- a/Scripts/compile_wasm2wat.ipynb
+++ b/Scripts/compile_wasm2wat.ipynb
@@ -31,7 +31,7 @@
     "        print(c_path)\n",
     "\n",
     "def multi_c2wasm2wat(file_list, max_workers=100):\n",
-    "    print(f\"一共{len(file_list)}个c文件\")\n",
+    "    print(f\"{len(file_list)} c files in all\")\n",
     "    with ProcessPoolExecutor(max_workers=max_workers) as executor:\n",
     "        for i, file_str in enumerate(file_list):\n",
     "            executor.submit(c2preprocessed, file_str, i)\n",
